--- a/src/VoIPClient/VoIPClient.vcxproj
+++ b/src/VoIPClient/VoIPClient.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{FC4F99A0-FF5B-4534-A4D0-E7BE3D3E30EF}</ProjectGuid>
+    <ProjectGuid>{EB3F9B8C-5201-4E9E-BE88-D0FCACEBF87C}</ProjectGuid>
     <Keyword>MFCProj</Keyword>
     <RootNamespace>VoIPClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
@@ -196,7 +196,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="calendarbar.h" />
-    <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="ClassView.h" />
     <ClInclude Include="FileView.h" />
     <ClInclude Include="framework.h" />
@@ -213,7 +212,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="calendarbar.cpp" />
-    <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="ClassView.cpp" />
     <ClCompile Include="FileView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
@@ -241,6 +239,7 @@
     <ResourceCompile Include="VoIPClient.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\VoIPServer\res\icons8-homer-simpson-32x32.ico" />
     <Image Include="res\classview.bmp" />
     <Image Include="res\classview_hc.bmp" />
     <Image Include="res\class_view.ico" />
@@ -251,6 +250,15 @@
     <Image Include="res\fileview_hc.bmp" />
     <Image Include="res\file_view.ico" />
     <Image Include="res\file_view_hc.ico" />
+    <Image Include="res\icons8-anonymous-mask-100.png" />
+    <Image Include="res\icons8-anonymous-mask-120.png" />
+    <Image Include="res\icons8-anonymous-mask-240.png" />
+    <Image Include="res\icons8-anonymous-mask-30.png" />
+    <Image Include="res\icons8-anonymous-mask-32x32.ico" />
+    <Image Include="res\icons8-anonymous-mask-480.png" />
+    <Image Include="res\icons8-anonymous-mask-60.png" />
+    <Image Include="res\icons8-anonymous-mask-90.png" />
+    <Image Include="res\icons8-homer-simpson-32x32.ico" />
     <Image Include="res\info.bmp" />
     <Image Include="res\menuimages.bmp" />
     <Image Include="res\menuimages_hc.bmp" />
